--- a/bio.css
+++ b/bio.css
@@ -54,7 +54,16 @@ body {
 
 .card:hover {
 
-	transform:scale(1.5)
+	/* transform:scale(1.5) */
+
+	border-radius:50%;
+-webkit-border-radius:50%;
+box-shadow: 0px 0px 15px 15px #ec731e;
+-webkit-box-shadow: 0px 0px 15px 15px #ec731e;
+transform: rotate(360deg);
+-webkit-transform: rotate(360deg);
+
+	
 
     
 }
